View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031302 | Open CASCADE | OCCT:Visualization | public | 2020-01-16 12:08 | 2020-12-02 17:12 |
Reporter | iko | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031302: Visualization, TKOpenGl - wrong tangent space calculation for normal maps | ||||
Description | Tangent space for normals must be independent of triangle orientation and must handle cases of back faces (inverted normals). | ||||
Steps To Reproduce | v3d/glsl/pbr_tangent_normals | ||||
Tags | No tags attached. | ||||
Test case number | v3d/glsl/pbr_tangent_normal | ||||
|
Branch CR31302 has been created by iko. SHA-1: 5c2b846fa8f8c669f738409757cf2bee0b4a256d Detailed log of new commits: Author: iko Date: Thu Jan 16 15:55:29 2020 +0300 0031302: Visualization, TKOpenGl - wrong tangent space calculation for normal maps The normal after tangent space calculation has been reverted in order to be in right orientation. The tangent space calculation has been modified in order to handle back faces with inverted normal. |
|
Please review the changes. http://vm-jenkins-test-12.nnov.opencascade.com:8080/job/CR31302-master-IKO-OCCT-Windows-64-VC14-opt-test-compare/1/ http://vm-jenkins-test-12.nnov.opencascade.com:8080/job/CR31302-master-IKO-OCCT-Debian80-64-opt-test-compare/1/ |
|
Combination - OCCT branch : WEEK-2 master SHA - 6558400123b810d47bd346c56eb5b304fa48343e fe4497f3246e6bc1ced97ac331c148f0809ded15 Products branch : WEEK-2 SHA - 61714ae872d45b51afb92a8857b495e2b7ecd308 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17001.940000000115 / 16989.810000000103 [+0.07%] Products Total CPU difference: 10717.560000000085 / 10741.020000000053 [-0.22%] Windows-64-VC14: OCCT Total CPU difference: 18446.140625 / 18447.0625 [-0.00%] Products Total CPU difference: 12698.09375 / 12436.203125 [+2.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31302 has been deleted by inv. SHA-1: 5c2b846fa8f8c669f738409757cf2bee0b4a256d |
|
normmap_tangent_KO.png (386,645 bytes) |
|
normmap_tangent_OK.png (377,881 bytes) |
occt: master 65584001 2020-01-16 12:55:29 Committer: bugmaster Details Diff |
0031302: Visualization, TKOpenGl - wrong tangent space calculation for normal maps The normal after tangent space calculation has been reverted in order to be in right orientation. The tangent space calculation has been modified in order to handle back faces with inverted normal. |
Affected Issues 0031302 |
|
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
add - tests/v3d/glsl/pbr_tangent_normal | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-01-16 12:08 | iko | New Issue | |
2020-01-16 12:08 | iko | Assigned To | => iko |
2020-01-16 12:12 | kgv | Product Version | => 7.5.0 |
2020-01-16 12:13 | kgv | Relationship added | child of 0031096 |
2020-01-16 12:13 | kgv | Relationship added | child of 0031098 |
2020-01-16 16:12 | git | Note Added: 0089915 | |
2020-01-16 17:39 | iko | Note Added: 0089918 | |
2020-01-16 17:39 | iko | Assigned To | iko => kgv |
2020-01-16 17:39 | iko | Status | new => resolved |
2020-01-16 17:39 | iko | Steps to Reproduce Updated | |
2020-01-16 17:41 | kgv | Assigned To | kgv => bugmaster |
2020-01-16 17:41 | kgv | Status | resolved => reviewed |
2020-01-17 15:51 | bugmaster | Note Added: 0089933 | |
2020-01-17 15:51 | bugmaster | Test case number | => v3d/glsl/pbr_tangent_normal |
2020-01-17 15:51 | bugmaster | Status | reviewed => tested |
2020-01-18 12:27 | bugmaster | Changeset attached | => occt master 65584001 |
2020-01-18 12:27 | bugmaster | Status | tested => verified |
2020-01-18 12:27 | bugmaster | Resolution | open => fixed |
2020-01-18 15:36 | git | Note Added: 0089941 | |
2020-01-23 12:28 | kgv | File Added: normmap_tangent_KO.png | |
2020-01-23 12:28 | kgv | File Added: normmap_tangent_OK.png | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |