0031302: Visualization, TKOpenGl - wrong tangent space calculation for normal maps

The normal after tangent space calculation has been reverted in order to be in right orientation.
The tangent space calculation has been modified in order to handle back faces with inverted normal.